src/sfdc/base/main/default/objects/B2C_Schema_Test__c/B2C_Schema_Test__c.object-meta.xml
<CustomObject>
    <description>... test object used to validate dynamic attribution of external JSON Object to SObject properties.</description>
    <label>B2C Schema Test</label>
    <nameField>
        <label>B2C Schema Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C Schema Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>