src/sfdc/base/main/default/objects/B2C_Schema_Test__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <description>... represents a date field.</description>
    <inlineHelpText>... represents a date field.</inlineHelpText>
    <label>Date Field</label>
    <type>Date</type>
</CustomField>