src/sfdc/base/main/default/objects/B2C_Schema_Test__c/fields/DateTime_Field__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Field__c</fullName>
    <description>... represents a dateTime field.</description>
    <inlineHelpText>... represents a dateTime field.</inlineHelpText>
    <label>DateTime Field</label>
    <type>DateTime</type>
</CustomField>