src/sfdc/base/main/default/objects/B2C_Schema_Test__c/fields/Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Field__c</fullName>
    <description>... represents a standard picklist field.</description>
    <inlineHelpText>... represents a standard picklist field.</inlineHelpText>
    <label>Picklist Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value One</fullName>
            </value>
            <value>
                <fullName>Value Two</fullName>
            </value>
            <value>
                <fullName>Value Three</fullName>
            </value>
            <value>
                <fullName>Value Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>