src/sfdc/base/main/default/objects/B2C_Schema_Test__c/fields/Textarea_Field__c.field-meta.xml
<CustomField>
    <fullName>Textarea_Field__c</fullName>
    <description>... represents a text-area field.</description>
    <inlineHelpText>... represents a text-area field.</inlineHelpText>
    <label>Textarea Field</label>
    <type>TextArea</type>
</CustomField>